--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
+    "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
     "react-bootstrap": "^1.4.3",
