--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
+  "proxy": "https://fleets-management-backend.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
